# microorganism_snps

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  pyproject.toml  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/microorganism_snps/: __init__.py  cli.py  data_processing.py  main.py  microorganism_snps.py  parameters.py  snp_analysis.py  utils.py
tests/: __init__.py  test_microorganism_snps.py
